Add JWT authentication

--- a/HR-Employees/appsettings.json
+++ b/HR-Employees/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DBContext": "Server=(localdb)\\mssqllocaldb;Database=HRCompany;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Issuer": "http://localhost:5118",
+    "Audience": "http://localhost:5118",
+    "Key": "sI3}hi6MxFjQLg?s05I)<F&>?p5FDbP4EO=8PJh,};n4=f7M.re:'zMLW*@+-Y%,"
   }
 }
